<resources>
    <string name="app_name">tetris</string>
    <string name="scores">Scores</string>
    <string name="lines">Lines</string>
    <string name="current">Current Record</string>
    <string name="highest">Highest Record</string>
    <string name="help_label">Help</string>
    <string name="help">Menu: Menu key\nPause: Menu key\nContinue: Menu key\nRotate: Up key\nLeft: Left key\nRight: Right key\nDown: Down key\nFall: Enter key</string>
    <string name="time">Time</string>
    <string name="game_new">New Game</string>
    <string name="game_continue">Continue Game</string>
    <string name="game_quit">Quit Game</string>
    <string name="stoped">Game Over</string>
    <string name="left_ctrl_panel">Left control panel</string>
    <string name="right_ctrl_panel">Right control panel</string>
</resources>
