<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="@dimen/gap"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/left_ctrl_panel"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/gap"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.github.talent518.tetris.view.ImageView
            android:id="@+id/left"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:src="@drawable/ctrl_left_slt" />

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/gap"
            android:layout_marginRight="@dimen/gap"
            android:orientation="vertical">

            <com.github.talent518.tetris.view.ImageView
                android:id="@+id/up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:src="@drawable/ctrl_up_slt" />

            <com.github.talent518.tetris.view.ImageView
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap"
                android:layout_marginBottom="@dimen/gap"
                android:onClick="onClick"
                android:src="@drawable/ctrl_ok" />

            <com.github.talent518.tetris.view.ImageView
                android:id="@+id/down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:src="@drawable/ctrl_down_slt" />

        </LinearLayout>

        <com.github.talent518.tetris.view.ImageView
            android:id="@+id/right"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:src="@drawable/ctrl_right_slt" />

    </LinearLayout>

    <com.github.talent518.tetris.view.TetrisView
        android:id="@+id/tetris"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/gap" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.github.talent518.tetris.view.PromptView
            android:id="@+id/prompt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/scores_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:text="@string/current"
            android:textColor="@color/label"
            android:textSize="@dimen/label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5px"
            android:layout_marginBottom="5px"
            android:background="#999999" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/lable_gap_value"
                android:layout_weight="1"
                android:text="@string/scores"
                android:textColor="@color/label"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/scores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/value"
                android:textSize="@dimen/value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/lable_gap_value"
                android:layout_weight="1"
                android:text="@string/lines"
                android:textColor="@color/label"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/value"
                android:textSize="@dimen/value" />

        </LinearLayout>

        <TextView
            android:id="@+id/scores_layout_highest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:text="@string/highest"
            android:textColor="@color/label"
            android:textSize="@dimen/label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5px"
            android:layout_marginBottom="5px"
            android:background="#999999" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/lable_gap_value"
                android:layout_weight="1"
                android:text="@string/scores"
                android:textColor="@color/label"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/scores_highest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/value"
                android:textSize="@dimen/value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/lable_gap_value"
                android:layout_weight="1"
                android:text="@string/lines"
                android:textColor="@color/label"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/lines_highest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/value"
                android:textSize="@dimen/value" />

        </LinearLayout>

        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:text="@string/help_label"
            android:textColor="@color/label"
            android:textSize="@dimen/label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5px"
            android:layout_marginBottom="5px"
            android:background="#999999" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Helvetica Neue,Helvetica,Arial,sans-serif"
            android:text="@string/help"
            android:textColor="@color/help"
            android:textSize="@dimen/help" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap"
            android:text="@string/time"
            android:textColor="@color/label"
            android:textSize="@dimen/label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5px"
            android:background="#999999" />

        <com.github.talent518.tetris.view.TimeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/time"
            android:textSize="@dimen/time" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_ctrl_panel"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/gap"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.github.talent518.tetris.view.ImageView
            android:id="@id/left"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:src="@drawable/ctrl_left_slt" />

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap"
            android:layout_marginRight="@dimen/gap"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.github.talent518.tetris.view.ImageView
                android:id="@id/up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:src="@drawable/ctrl_up_slt" />

            <com.github.talent518.tetris.view.ImageView
                android:id="@id/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap"
                android:layout_marginBottom="@dimen/gap"
                android:onClick="onClick"
                android:src="@drawable/ctrl_ok" />

            <com.github.talent518.tetris.view.ImageView
                android:id="@id/down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:src="@drawable/ctrl_down_slt" />

        </LinearLayout>

        <com.github.talent518.tetris.view.ImageView
            android:id="@id/right"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:src="@drawable/ctrl_right_slt" />

    </LinearLayout>

</LinearLayout>